refactor: Change fixed-N target - baseline vs augmented strategies
- AUG-1 (Baseline): ~14,936 samples (natural, no augmentation)
- AUG-2/3/4/5: All train with 30,000 samples (TARGET_AUG_SIZE)
- Each augmented strategy does its augmentation, then normalized to common size
- Fair comparison: all 4 augmentation strategies train with same data quantity
- Quality differences (not quantity) will determine which augmentation technique works best

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -371,9 +371,10 @@
     "\n",
     "# Fixed-N setup for objective augmentation comparison\n",
     "FIXED_N_SEED = 42\n",
-    "TARGET_TRAIN_SIZE = len(data['train_dataset'])\n",
+    "TARGET_TRAIN_SIZE = len(data['train_dataset'])  # Baseline size (~14,936)\n",
+    "TARGET_AUG_SIZE = 30000  # Target size for AUG-2/3/4/5 (all augmented strategies train with same N)\n",
     "\n",
-    "def apply_fixed_n(texts, labels, target_size=TARGET_TRAIN_SIZE, seed=FIXED_N_SEED):\n",
+    "def apply_fixed_n(texts, labels, target_size, seed=FIXED_N_SEED):\n",
     "    if len(texts) != len(labels):\n",
     "        raise ValueError(f\"texts/labels length mismatch: {len(texts)} vs {len(labels)}\")\n",
     "\n",
@@ -391,7 +392,8 @@
     "\n",
     "    return [texts[i] for i in indices], [labels[i] for i in indices]\n",
     "\n",
-    "print(f\"🎯 Fixed-N target train size: {TARGET_TRAIN_SIZE}\")\n",
+    "print(f\"🎯 Baseline train size: {TARGET_TRAIN_SIZE}\")\n",
+    "print(f\"🎯 Augmentation strategies target size: {TARGET_AUG_SIZE} (AUG-2/3/4/5 will train with equal data)\")\n",
     "\n",
     "strategy_name = \"aug_baseline\"\n",
     "print(f\"\\n{'='*60}\")\n",
@@ -419,6 +421,7 @@
     "print(\"📋 Konfigürasyon:\")\n",
     "print(f\"   Strategy: Weighted BCE (Baseline for comparison)\")\n",
     "print(f\"   Augmentation: NONE\")\n",
+    "print(f\"   Train size: {len(data['train_dataset'])} (natural baseline)\")\n",
     "print(f\"   Num labels: {strategy_config['num_labels']}\")\n",
     "\n",
     "# Load model\n",
@@ -542,15 +545,15 @@
     "print(f\"✅ Original samples: {len(train_df)}\")\n",
     "print(f\"✅ Augmented samples: {len(augmented_train_texts)} (3x augmentation)\")\n",
     "\n",
-    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "# FIXED-N: Match train size to common augmentation target for fair comparison\n",
     "_before_n = len(augmented_train_texts)\n",
     "augmented_train_texts, augmented_train_labels = apply_fixed_n(\n",
     "    augmented_train_texts,\n",
     "    augmented_train_labels,\n",
-    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    target_size=TARGET_AUG_SIZE,\n",
     "    seed=FIXED_N_SEED,\n",
     ")\n",
-    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_AUG_SIZE})\")\n",
     "\n",
     "# Prepare augmented data\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -659,8 +662,8 @@
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + IoC Replacement (3x) [Fixed N]',\n",
-    "    'description': 'Training data augmented with IoC replacement only (fixed train size)',\n",
+    "    'config': f'Weighted BCE + IoC Replacement [N={TARGET_AUG_SIZE}]',\n",
+    "    'description': f'Training data augmented with IoC replacement (normalized to {TARGET_AUG_SIZE} samples)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -760,15 +763,15 @@
     "print(f\"Original samples: {len(train_df)}\")\n",
     "print(f\"Augmented samples: {len(augmented_train_texts)} (+{len(augmented_train_texts) - len(train_df)} from back-translation)\")\n",
     "\n",
-    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "# FIXED-N: Match train size to common augmentation target for fair comparison\n",
     "_before_n = len(augmented_train_texts)\n",
     "augmented_train_texts, augmented_train_labels = apply_fixed_n(\n",
     "    augmented_train_texts,\n",
     "    augmented_train_labels,\n",
-    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    target_size=TARGET_AUG_SIZE,\n",
     "    seed=FIXED_N_SEED,\n",
     ")\n",
-    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_train_texts)} (target={TARGET_AUG_SIZE})\")\n",
     "\n",
     "# Create custom dataset\n",
     "from src.data_loader import prepare_data\n",
@@ -877,8 +880,8 @@
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Back-translation (30% tail) [Fixed N]',\n",
-    "    'description': 'Training data augmented with back-translation for tail TTPs (fixed train size)',\n",
+    "    'config': f'Weighted BCE + Back-translation [N={TARGET_AUG_SIZE}]',\n",
+    "    'description': f'Training data augmented with back-translation for tail TTPs (normalized to {TARGET_AUG_SIZE} samples)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -975,15 +978,15 @@
     "print(f\"Augmented samples: {len(augmented_texts)}\")\n",
     "print(f\"Augmentation ratio: {len(augmented_texts) / len(train_texts):.2f}x\")\n",
     "\n",
-    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "# FIXED-N: Match train size to common augmentation target for fair comparison\n",
     "_before_n = len(augmented_texts)\n",
     "augmented_texts, augmented_labels = apply_fixed_n(\n",
     "    augmented_texts,\n",
     "    augmented_labels,\n",
-    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    target_size=TARGET_AUG_SIZE,\n",
     "    seed=FIXED_N_SEED,\n",
     ")\n",
-    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_AUG_SIZE})\")\n",
     "\n",
     "# Create custom dataset\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -1090,8 +1093,8 @@
     "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Oversampling Only [Fixed N]',\n",
-    "    'description': 'Training data augmented with tail TTP oversampling (fixed train size)',\n",
+    "    'config': f'Weighted BCE + Oversampling [N={TARGET_AUG_SIZE}]',\n",
+    "    'description': f'Training data augmented with tail TTP oversampling (normalized to {TARGET_AUG_SIZE} samples)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
@@ -1203,15 +1206,15 @@
     "print(f\"Augmented samples: {len(augmented_texts)}\")\n",
     "print(f\"Augmentation ratio: {len(augmented_texts) / len(train_texts):.2f}x\")\n",
     "\n",
-    "# FIXED-N: Match train size to baseline for objective comparison\n",
+    "# FIXED-N: Match train size to common augmentation target for fair comparison\n",
     "_before_n = len(augmented_texts)\n",
     "augmented_texts, augmented_labels = apply_fixed_n(\n",
     "    augmented_texts,\n",
     "    augmented_labels,\n",
-    "    target_size=TARGET_TRAIN_SIZE,\n",
+    "    target_size=TARGET_AUG_SIZE,\n",
     "    seed=FIXED_N_SEED,\n",
     ")\n",
-    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_TRAIN_SIZE})\")\n",
+    "print(f\"🎯 Fixed-N applied: {_before_n} -> {len(augmented_texts)} (target={TARGET_AUG_SIZE})\")\n",
     "\n",
     "# Create custom dataset\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -1318,8 +1321,8 @@
     "training_time_min = (time.time() - strategy_start_time) / 60\n",
     "\n",
     "all_test_results[strategy_name] = {\n",
-    "    'config': 'Weighted BCE + Combined Augmentation [Fixed N]',\n",
-    "    'description': 'Training data augmented with IoC replacement, back-translation, and tail oversampling (fixed train size)',\n",
+    "    'config': f'Weighted BCE + Combined [N={TARGET_AUG_SIZE}]',\n",
+    "    'description': f'Training data augmented with IoC, back-translation, and tail oversampling (normalized to {TARGET_AUG_SIZE} samples)',\n",
     "    'training_time_min': training_time_min,\n",
     "    'results': test_results\n",
     "}\n",
