fix: Use original label space in augmented datasets to prevent dimension mismatch
- AugmentedCTIDataset now accepts label_list parameter (original label_names)
- Model initialized with num_labels (499) instead of augmented dataset's dynamic label count
- Prevents RuntimeError: tensor size mismatch (499 vs 498) during BCE loss computation
- All augmentation strategies (AUG-2/3/4/5) now consistent with baseline label space

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -558,19 +558,14 @@
     "# Prepare augmented data\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "# Create custom dataset\n",
+    "# Create custom dataset (use original label space for consistency)\n",
     "class AugmentedCTIDataset(Dataset):\n",
-    "    def __init__(self, texts, labels, tokenizer, max_length):\n",
+    "    def __init__(self, texts, labels, tokenizer, max_length, label_list):\n",
     "        self.texts = texts\n",
     "        self.labels = labels\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_length = max_length\n",
-    "        \n",
-    "        # Get unique labels\n",
-    "        all_labels = set()\n",
-    "        for label_list in labels:\n",
-    "            all_labels.update(label_list)\n",
-    "        self.label_list = sorted(list(all_labels))\n",
+    "        self.label_list = label_list\n",
     "        self.label_to_idx = {label: idx for idx, label in enumerate(self.label_list)}\n",
     "        \n",
     "        # Tokenize all texts\n",
@@ -584,9 +579,9 @@
     "        \n",
     "        # Encode labels\n",
     "        self.encoded_labels = []\n",
-    "        for label_list in labels:\n",
+    "        for label_list_item in labels:\n",
     "            encoded = [0] * len(self.label_list)\n",
-    "            for label in label_list:\n",
+    "            for label in label_list_item:\n",
     "                if label in self.label_to_idx:\n",
     "                    encoded[self.label_to_idx[label]] = 1\n",
     "            self.encoded_labels.append(encoded)\n",
@@ -606,7 +601,8 @@
     "    augmented_train_texts,\n",
     "    augmented_train_labels,\n",
     "    tokenizer,\n",
-    "    BASE_CONFIG['max_length']\n",
+    "    BASE_CONFIG['max_length'],\n",
+    "    label_names  # Use original label space\n",
     ")\n",
     "\n",
     "# Create dataloader\n",
@@ -631,7 +627,7 @@
     "print(\"\\n🔧 Model yükleniyor...\")\n",
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    num_labels=len(aug_train_dataset.label_list),\n",
+    "    num_labels=num_labels,  # Use original num_labels for consistency\n",
     "    device=BASE_CONFIG['device'],\n",
     "    use_focal_loss=False,\n",
     "    pos_weight=strategy_config['pos_weight']\n",
@@ -778,17 +774,12 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "class AugmentedCTIDataset(Dataset):\n",
-    "    def __init__(self, texts, labels, tokenizer, max_length):\n",
+    "    def __init__(self, texts, labels, tokenizer, max_length, label_list):\n",
     "        self.texts = texts\n",
     "        self.labels = labels\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_length = max_length\n",
-    "        \n",
-    "        # Get unique labels\n",
-    "        all_labels = set()\n",
-    "        for label_list in labels:\n",
-    "            all_labels.update(label_list)\n",
-    "        self.label_list = sorted(list(all_labels))\n",
+    "        self.label_list = label_list\n",
     "        self.label_to_idx = {label: idx for idx, label in enumerate(self.label_list)}\n",
     "        \n",
     "        # Tokenize all texts\n",
@@ -802,9 +793,9 @@
     "        \n",
     "        # Encode labels\n",
     "        self.encoded_labels = []\n",
-    "        for label_list in labels:\n",
+    "        for label_list_item in labels:\n",
     "            encoded = [0] * len(self.label_list)\n",
-    "            for label in label_list:\n",
+    "            for label in label_list_item:\n",
     "                if label in self.label_to_idx:\n",
     "                    encoded[self.label_to_idx[label]] = 1\n",
     "            self.encoded_labels.append(encoded)\n",
@@ -824,7 +815,8 @@
     "    augmented_train_texts,\n",
     "    augmented_train_labels,\n",
     "    tokenizer,\n",
-    "    BASE_CONFIG['max_length']\n",
+    "    BASE_CONFIG['max_length'],\n",
+    "    label_names  # Use original label space\n",
     ")\n",
     "\n",
     "# Create dataloader\n",
@@ -849,7 +841,7 @@
     "print(\"\\n🔧 Model yükleniyor...\")\n",
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    num_labels=len(aug_train_dataset.label_list),\n",
+    "    num_labels=num_labels,  # Use original num_labels for consistency\n",
     "    device=BASE_CONFIG['device'],\n",
     "    use_focal_loss=False,\n",
     "    pos_weight=strategy_config['pos_weight']\n",
@@ -992,17 +984,12 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "class AugmentedCTIDataset(Dataset):\n",
-    "    def __init__(self, texts, labels, tokenizer, max_length):\n",
+    "    def __init__(self, texts, labels, tokenizer, max_length, label_list):\n",
     "        self.texts = texts\n",
     "        self.labels = labels\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_length = max_length\n",
-    "        \n",
-    "        # Get unique labels\n",
-    "        all_labels = set()\n",
-    "        for label_list in labels:\n",
-    "            all_labels.update(label_list)\n",
-    "        self.label_list = sorted(list(all_labels))\n",
+    "        self.label_list = label_list\n",
     "        self.label_to_idx = {label: idx for idx, label in enumerate(self.label_list)}\n",
     "        \n",
     "        # Tokenize all texts\n",
@@ -1016,9 +1003,9 @@
     "        \n",
     "        # Encode labels\n",
     "        self.encoded_labels = []\n",
-    "        for label_list in labels:\n",
+    "        for label_list_item in labels:\n",
     "            encoded = [0] * len(self.label_list)\n",
-    "            for label in label_list:\n",
+    "            for label in label_list_item:\n",
     "                if label in self.label_to_idx:\n",
     "                    encoded[self.label_to_idx[label]] = 1\n",
     "            self.encoded_labels.append(encoded)\n",
@@ -1038,7 +1025,8 @@
     "    augmented_texts,\n",
     "    augmented_labels,\n",
     "    tokenizer,\n",
-    "    BASE_CONFIG['max_length']\n",
+    "    BASE_CONFIG['max_length'],\n",
+    "    label_names  # Use original label space\n",
     ")\n",
     "\n",
     "# Create dataloader\n",
@@ -1063,7 +1051,7 @@
     "print(\"\\n🔧 Model yükleniyor...\")\n",
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    num_labels=len(aug_train_dataset.label_list),\n",
+    "    num_labels=num_labels,  # Use original num_labels for consistency\n",
     "    device=BASE_CONFIG['device'],\n",
     "    use_focal_loss=False,\n",
     "    pos_weight=strategy_config['pos_weight']\n",
@@ -1220,17 +1208,12 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "class AugmentedCTIDataset(Dataset):\n",
-    "    def __init__(self, texts, labels, tokenizer, max_length):\n",
+    "    def __init__(self, texts, labels, tokenizer, max_length, label_list):\n",
     "        self.texts = texts\n",
     "        self.labels = labels\n",
     "        self.tokenizer = tokenizer\n",
     "        self.max_length = max_length\n",
-    "        \n",
-    "        # Get unique labels\n",
-    "        all_labels = set()\n",
-    "        for label_list in labels:\n",
-    "            all_labels.update(label_list)\n",
-    "        self.label_list = sorted(list(all_labels))\n",
+    "        self.label_list = label_list\n",
     "        self.label_to_idx = {label: idx for idx, label in enumerate(self.label_list)}\n",
     "        \n",
     "        # Tokenize all texts\n",
@@ -1244,9 +1227,9 @@
     "        \n",
     "        # Encode labels\n",
     "        self.encoded_labels = []\n",
-    "        for label_list in labels:\n",
+    "        for label_list_item in labels:\n",
     "            encoded = [0] * len(self.label_list)\n",
-    "            for label in label_list:\n",
+    "            for label in label_list_item:\n",
     "                if label in self.label_to_idx:\n",
     "                    encoded[self.label_to_idx[label]] = 1\n",
     "            self.encoded_labels.append(encoded)\n",
@@ -1266,7 +1249,8 @@
     "    augmented_texts,\n",
     "    augmented_labels,\n",
     "    tokenizer,\n",
-    "    BASE_CONFIG['max_length']\n",
+    "    BASE_CONFIG['max_length'],\n",
+    "    label_names  # Use original label space\n",
     ")\n",
     "\n",
     "# Create dataloader\n",
@@ -1291,7 +1275,7 @@
     "print(\"\\n🔧 Model yükleniyor...\")\n",
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    num_labels=len(aug_train_dataset.label_list),\n",
+    "    num_labels=num_labels,  # Use original num_labels for consistency\n",
     "    device=BASE_CONFIG['device'],\n",
     "    use_focal_loss=False,\n",
     "    pos_weight=strategy_config['pos_weight']\n",
