Add training time comparison chart to Part B1 results

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -469,7 +469,7 @@
     "print(\"\\n\" + \"=\"*60)\n",
     "print(f\"✅ AUG-1 TAMAMLANDI: {strategy_name}\")\n",
     "print(f\"⏱️  Training Time: {training_time_min:.2f} minutes\")\n",
-    "print(\"=\"*60)\n"
+    "print(\"=\"*60)"
    ]
   },
   {
@@ -2121,17 +2121,42 @@
     "    plt.close()\n",
     "    print(f\"  ✓ Hamming Loss line chart saved\")\n",
     "    \n",
-    "    print(f\"\\n✅ All line charts saved to: {loss_plots_dir}/\")\n",
+    "    # ========== 5. TRAINING TIME BAR CHART (NEW) ==========\n",
+    "    fig5, ax5 = plt.subplots(figsize=(10, 6))\n",
+    "    values = df_loss_comparison['Training_Time_min'].tolist()\n",
+    "    bars = ax5.bar(x_pos, values, color=['#3498DB', '#2ECC71', '#E67E22', '#9B59B6'], alpha=0.8, edgecolor='black', linewidth=1.2)\n",
+    "    ax5.set_xticks(x_pos)\n",
+    "    ax5.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "    ax5.set_ylabel('Training Time (minutes)', fontsize=12)\n",
+    "    ax5.set_title('Loss Functions: Training Time Comparison', fontsize=14, fontweight='bold')\n",
+    "    ax5.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "    ax5.set_ylim([0, max(values)*1.15])\n",
+    "    \n",
+    "    # Add value labels on bars\n",
+    "    for i, (bar, val) in enumerate(zip(bars, values)):\n",
+    "        height = bar.get_height()\n",
+    "        ax5.text(bar.get_x() + bar.get_width()/2., height,\n",
+    "                f'{val:.1f} min',\n",
+    "                ha='center', va='bottom', fontsize=10, fontweight='bold',\n",
+    "                bbox=dict(boxstyle='round,pad=0.4', facecolor='white', alpha=0.9, edgecolor='gray'))\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{loss_plots_dir}/training_time_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    print(f\"  ✓ Training Time bar chart saved\")\n",
+    "    \n",
+    "    print(f\"\\n✅ All charts saved to: {loss_plots_dir}/\")\n",
     "    \n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"📁 EXPORTED FILES:\")\n",
     "    print(\"=\"*80)\n",
     "    print(f\"  • CSV: {loss_csv_path} (includes @10 metrics)\")\n",
-    "    print(f\"  • Line Charts: {loss_plots_dir}/\")\n",
+    "    print(f\"  • Charts: {loss_plots_dir}/\")\n",
     "    print(\"    - map_comparison.png\")\n",
     "    print(\"    - recall_5_comparison.png\")\n",
     "    print(\"    - precision_5_comparison.png\")\n",
     "    print(\"    - hamming_loss_comparison.png\")\n",
+    "    print(\"    - training_time_comparison.png  ⭐ NEW\")\n",
     "    print(\"=\"*80)\n",
     "    \n",
     "else:\n",
