--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2156,7 +2156,7 @@
     "    print(\"    - recall_5_comparison.png\")\n",
     "    print(\"    - precision_5_comparison.png\")\n",
     "    print(\"    - hamming_loss_comparison.png\")\n",
-    "    print(\"    - training_time_comparison.png  ⭐ NEW\")\n",
+    "    print(\"    - training_time_comparison.png \")\n",
     "    print(\"=\"*80)\n",
     "    \n",
     "else:\n",
